ENYO-496: Fix DataGridListSample layout problem
- Remove overflow: visible from panels which is not need to be there
- Changed width, height 100% to left, right, top, bottom 0

DCO-1.1-Signed-Off-By: Kunmyon Choi kunmyon.choi@lge.com

--- a/css/Panels.less
+++ b/css/Panels.less
@@ -3,9 +3,10 @@
 	&.activity,
 	&.alwaysviewing {
 		position: absolute;
-		width: 100%;
-		height: 100%;
-		overflow: visible;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
 		pointer-events: none;
 
 		&.moon-composite {
